# maiq-parser

./: .env  .gitignore  Cargo.toml  build.rs  readme.md
.github/workflows/: build.yml  release.yml  rust.yml
default/: fri.json  mon.json  sat.json  thu.json  tue.json  wed.json
maiq-shared/: Cargo.toml
maiq-shared/src/: compare.rs  default.rs  lib.rs  utils.rs
maiq-structs/: Cargo.toml
maiq-structs/src/: lib.rs  timetable.rs  utils.rs
resources/: 3.html  4.html  5.html
resourses/: 1.html  2.html
src/: env.rs  error.rs  fetch.rs  lib.rs  main.rs  parser.rs  replacer.rs  timetable.rs  utils.rs
src/parser/: date.rs  mod.rs  replace.rs  snapshot.rs  table.rs
