[package]
name = "maiq-parser"
authors = ["pashokitsme <pashamail79@gmail.com>"]
repository = "https://github.com/pashokitsme/maiq-parser"
license = "MPL-2.0"
version = "0.8.3"
edition = "2021"

[profile.release]
strip = true
lto = true
opt-level = 3

[profile.cli]
inherits = "release"
panic = "abort"


[features]
cli = ["tokio", "colored"]

[lib]

[dependencies]
maiq-shared = { path = "maiq-shared/" }
reqwest = { version = "0.11.13" }
tl = { version = "0.7.7" }
tl_table_parser = { git = "https://github.com/pashokitsme/tl-table-parser", version = "0.1.0" }

chrono = { version = "0.4.23", features = ["serde"] }
dotenvy = "0.15.6"
lazy_static = "1.4.0"
log = "0.4.17"
serde = { version = "1.0.149", features = ["derive"] }
thiserror = "1.0.38"
serde_json = "1.0.91"

tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"], optional = true }
include_dir = "0.7.3"
anyhow = "1.0.70"
colored = { version = "2.0.0", optional = true }
