[package]
name = "maiq-shared"
authors = ["pashokitsme <pashamail79@gmail.com>"]
version = "0.4.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
lazy_static = "1.4.0"
log = "0.4.17"
serde = { version = "1.0.152", features = ["serde_derive"] }
sha2 = "0.10.6"
